--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,21 @@ main {
     margin-top: 80px;
 }
 
+body {
+    background:url(/images/background_index.jpg) no-repeat center center fixed;
+    -webkit-background-size: 100%; 
+    -moz-background-size: 100%; 
+    -o-background-size: 100%; 
+    background-size: 100%; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+#pixie{
+    position: fixed; 
+}
+p {
+    color: #151515;
+     font-size:30px;
+}
